# rk3588RGA

./: README.md
HGRknnDetect_0107/: CMakeLists.txt  DetectInC.py  Detector.cpp  Detector.h  README.md  RknnPool.hpp  ThreadPool.hpp  YoloManager.cpp  YoloManager.h  image_rga.cpp  image_rga.h  labels_list.txt  libExport.cpp  libExport.h  main.cpp
HGRknnDetect_0107/utils/: CMakeLists.txt  image_utils.c  image_utils.h  stb_image_write.h
HGRknnDetect_0107/yolov5/: postprocess.cpp  postprocess.h  yolov5.cc  yolov5.h
HGRknnDetect_0107/yolov8/: postprocess.cpp  postprocess.h  yolov8.cc  yolov8.h
HGStream/: CMakeLists.txt  README.md  StreamDecodeInC.py  StreamDecodeInMpp.py  StreamManager.cpp  StreamManager.h  libExportStream.cpp  libExportStream.h  main.cpp  test_ffmedia.py
HGStream/include/base/: ff_type.hpp  media_buffer.hpp  video_buffer.hpp
HGStream/include/module/: base_config.h  module_media.hpp
HGStream/include/module/vi/: module_alsaCapture.hpp  module_cam.hpp  module_fileReader.hpp  module_memReader.hpp  module_rtmpClient.hpp  module_rtspClient.hpp
HGStream/include/module/vo/: module_alsaPlayBack.hpp  module_drmDisplay.hpp  module_fileWriter.hpp  module_gb28181Client.hpp  module_rendererVideo.hpp  module_rtmpServer.hpp  module_rtspServer.hpp
HGStream/include/module/vp/: module_aacdec.hpp  module_aacenc.hpp  module_inference.hpp  module_mppdec.hpp  module_mppenc.hpp  module_rga.hpp
